# python-intermediate-inflammation

./: .gitignore  LICENSE  README.md  example.py  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: models.py
tests/: test_models.py  test_patient.py
